Overflow on iPad fixed

--- a/css/alexandria.css
+++ b/css/alexandria.css
@@ -109,7 +109,10 @@ header {
 	border-bottom-right-radius: 3px;*/
 	box-shadow: 0 1px 3px rgba(68, 68, 68, 0.69);
 	-moz-box-shadow: 0 1px 3px rgba(68, 68, 68, 0.69);
-  text-align: center;
+	text-align: center;
+	box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-webkit-box-sizing: border-box;
 }
 
 header input {
@@ -236,18 +239,21 @@ ul#archiveList li a span:first-child {
 #tweetList li span.tweet-date {
 	float: right;
 }
-.timeline {
-  /*display: none;*/
+body > footer {
 	position: absolute;
 	bottom: 0;
 	left: 0;
 	z-index: 200;
 	width: 100%;
 	height: 50px;
-	padding: 0;
-	background-color: #bcbcbc;
+	padding: 50px 0 0;
+	overflow: hidden;	
 }
-
+section#timeline {
+	padding: 0;
+	width: 100%;
+	height: 100%;
+}
 .ui-rangeSlider-bar {
 	-moz-box-shadow: 2px 3px 4px rgba(0, 0, 0, 0.25), -2px 3px 4px rgba(0, 0, 0, 0.25);
 	box-shadow: 2px 3px 4px rgba(0, 0, 0, 0.25), -2px 3px 4px rgba(0, 0, 0, 0.25);
@@ -258,7 +264,12 @@ ul#archiveList li a span:first-child {
 	box-shadow: none;
 	-webkit-box-shadow: none;
 	-moz-box-shadow: none;
+}
+.ui-rangeSlider-container, .ui-rangeSlider-arrow {
 	height: 100%;
+}
+.ui-rangeSlider-label {
+	height: 23px;
 }
 .ui-rangeSlider .ui-ruler-scale0 .ui-ruler-tick-label {
 	line-height: 40px;
